<resources>
    <string name="ok">OK</string>
    <string name="text_2_path" translatable="false">fonts/OpenSans-SemiBold.ttf</string>
    <string name="cancel">Cancel</string>
    <string name="app_ver">Version 1.0.0.0</string>
    <string name="save_as">Save as</string>
    <string name="file_saved">File saved successfully</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="open_with">Open with</string>
    <string name="edit_with">Edit with</string>
    <string name="no_app_found">No valid app found</string>
    <string name="set_as">Set as</string>
    <string name="refresh">Refresh</string>
    <string name="confirm_storage_access_android_text">Please allow the app accessing the selected storage on the next screen by pressing \'Use this folder\' at the bottom.</string>
    <string name="File_name">File Name</string>
    <string name="File_size">File Size</string>
    <string name="location">Location</string>
    <string name="Date">Date</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="dial_number">Dial number</string>
    <string name="unknown">Unknown</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="deleting_folder">Deleting folder \'%s\'</string>
    <string name="none">None</string>
    <string name="label">Label</string>
    <string name="transparent">Transparent</string>
    <string name="transparent_color">Transparent color</string>
    <string name="select_a_different_color">Select a different color</string>
    <string name="download">Download</string>
    <string name="notification">Notification</string>
    <string name="email">Email</string>
    <string name="previous">Previous</string>
    <string name="playpause">Play / Pause</string>
    <string name="next">Next</string>
    <string name="number">Number</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="no_access_to_contacts">The app could not access your contacts</string>
    <string name="insert_text_here">Insert text here</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="increase_column_count">Increase column count</string>
    <string name="reduce_column_count">Reduce column count</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="select_photo">Select photo</string>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="search">Search</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="filter">Filter</string>
    <string name="no_items_found">No items found.</string>
    <string name="change_filter">Change filter</string>
    <string name="no_storage_permissions">Storage permission is required</string>
    <string name="no_contacts_permission">Contacts permission is required</string>
    <string name="no_camera_permissions">Camera permission is required</string>
    <string name="no_audio_permissions">Audio permission is required</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_file_error">Could not rename the file</string>
    <string name="rename_folder_error">Could not rename the folder</string>
    <string name="rename_folder_empty">Folder name must not be empty</string>
    <string name="rename_folder_exists">A folder with that name already exists</string>
    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
    <string name="rename_folder_ok">Folder renamed successfully</string>
    <string name="renaming_folder">Renaming folder</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="filename_invalid_characters">Filename contains invalid characters</string>
    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="append_filenames">Append filenames</string>
    <string name="simple_renaming">Simple renaming</string>
    <string name="pattern_renaming">Pattern</string>
    <string name="string_to_add">String to add</string>
    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second\n%i - number increasing from 1</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="copy_move">Copy / Move</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Select destination</string>
    <string name="click_select_destination">Click here to select destination</string>
    <string name="invalid_destination">Could not write to the selected destination</string>
    <string name="please_select_destination">Please select a destination</string>
    <string name="source_and_destination_same">Source and destination cannot be the same</string>
    <string name="copy_failed">Could not copy the files</string>
    <string name="copying">Copying…</string>
    <string name="copying_success">Files copied successfully</string>
    <string name="move_failed">Files not moved due to some error</string>
    <string name="moving">Moving…</string>
    <string name="moving_success">Files moved successfully</string>
    <string name="moving_success_partial">Some files could not be moved</string>
    <string name="copying_success_partial">Some files could not be copied</string>
    <string name="no_files_selected">No files selected</string>
    <string name="saving">Saving…</string>
    <string name="could_not_create_folder">Could not create folder %s</string>
    <string name="could_not_create_file">Could not create file %s</string>
    <string name="no_new_items">No new items have been found</string>
    <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
    <string name="create_new">Create new</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="name_taken">A file or folder with that name already exists</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="empty_name">Please enter a name</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="file_already_exists">File \"%s\" already exists</string>
    <string name="file_already_exists_overwrite">File \"%s\" already exists. Overwrite?</string>
    <string name="folder_already_exists">Folder \"%s\" already exists</string>
    <string name="merge">Merge</string>
    <string name="keep_both">Keep both</string>
    <string name="overwrite">Overwrite</string>
    <string name="skip">Skip</string>
    <string name="append">Append with \'_1\'</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select a file</string>
    <string name="rename_new">Rename</string>
    <string name="confirm_storage_access_title">Confirm external storage access</string>
    <string name="confirm_storage_access_text">Please choose the top folder of the SD card on the next screen, to grant write access</string>
    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
    <string name="confirm_selection">Confirm selection</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="delete_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="deleting_items">
        <item quantity="one">Deleting %d item</item>
        <item quantity="other">Deleting %d items</item>
    </plurals>
    <plurals name="delete_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <string name="select_storage">Select storage</string>
    <string name="internal">Internal</string>
    <string name="sd_card">SD Card</string>
    <string name="root">Root</string>
    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
    <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
    <string name="properties">Properties</string>
    <string name="path">Path</string>
    <string name="items_selected">Items selected</string>
    <string name="direct_children_count">Direct children count</string>
    <string name="files_count">Total files count</string>
    <string name="resolution">Resolution</string>
    <string name="duration">Duration</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="focal_length">Focal length</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso_speed">ISO speed</string>
    <string name="f_number">F-number</string>
    <string name="camera">Camera</string>
    <string name="exif">EXIF</string>
    <string name="song_title">Song title</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="altitude">Altitude</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="primary_color">Primary color</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="sort_by">Sort by</string>
    <string name="show_hidden_items">Show hidden items</string>
</resources>