<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="?attr/ic_search_vector"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/go_home"
        android:icon="?attr/ic_home_vector"
        android:title="@string/go_to_home_folder"
        app:showAsAction="collapseActionView|ifRoom"/>
<!--    <item-->
<!--        android:id="@+id/change_view_type"-->
<!--        android:title="@string/change_view_type"-->

<!--        app:showAsAction="always"/>-->

    <item
        android:id="@+id/sort"
        android:icon="?attr/ic_sort_vector"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/create_new_folder"
        android:title="@string/create_new_folder"
        app:showAsAction="never"/>
    <item
        android:id="@+id/increase_column_count"
        android:title="@string/increase_column_count"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reduce_column_count"
        android:title="@string/reduce_column_count"
        app:showAsAction="never"/>

    <group android:checkableBehavior="all">
        <item android:id="@+id/settings_show_hidden"
            android:title="@string/show_hidden_items" />
    </group>

</menu>
