<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rename_items_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <com.simplemobiletools.commons.views.MyEditText
        android:id="@+id/rename_items_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_cross_vector_black"
        android:layout_marginBottom="@dimen/activity_margin"
        android:hint="@string/string_to_add"
        android:textColor="@color/material_gray_900"
        style="@style/textstyle"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/normal_text_size"/>

    <RadioGroup
        android:id="@+id/rename_items_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rename_items_value">

        <com.simplemobiletools.commons.views.MyCompatRadioButton
            android:id="@+id/rename_items_radio_append"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/material_gray_900"
            android:buttonTint="@color/material_gray_600"
            style="@style/textstyle"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/append_filenames"/>

        <com.simplemobiletools.commons.views.MyCompatRadioButton
            android:id="@+id/rename_items_radio_prepend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_gray_900"
            android:buttonTint="@color/material_gray_600"
            style="@style/textstyle"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/prepend_filenames"/>
    </RadioGroup>
</RelativeLayout>
